--- a/gui/src/index.html
+++ b/gui/src/index.html
@@ -1,23 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html style="height:100%" lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Dashboard</title>
-  <base href="/">
+  <head>
+    <meta charset="utf-8" />
+    <title>Dashboard</title>
+    <base href="/" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="owaspFAV.png">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-  <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="owaspFAV.png" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
 
-  <link href="https://fonts.googleapis.com/icon?family=Roboto" rel="stylesheet">
-
-
-
-</head>
-<body style="height:100%">
-  
-  <app-root></app-root>
-</body>
+    <link
+      href="https://fonts.googleapis.com/icon?family=Roboto"
+      rel="stylesheet"
+    />
+  </head>
+  <body style="height:100%">
+    <app-root></app-root>
+  </body>
 </html>
